--- a/src/app/ricerca/ricerca.component.html
+++ b/src/app/ricerca/ricerca.component.html
@@ -1,1 +1,11 @@
-<p>ricerca works!</p>
+<form>
+    <div class="form-row align-items-center">
+      <div class="col-auto">
+        <label class="sr-only" for="inlineFormInput">Parola chiave</label>
+        <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Parola chiave(es;marketing o sviluppatore)">
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-2">cerca</button>
+      </div>
+    </div>
+  </form>
