--- a/src/app/middle/ricerca/ricerca.component.html
+++ b/src/app/middle/ricerca/ricerca.component.html
@@ -1,1 +1,17 @@
-<p>ricerca works!</p>
+  <div class="container">
+    <form>
+        <div class="mx-auto">
+            <div class="form-row align-items-center">
+                <div class="col-auto">
+                    <label class="sr-only" for="inlineFormInput">Parola chiave</label>
+                    <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Parola chiave (es: marketin o sviluppatore)">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-2">Ricerca</button>
+                </div>
+            </div>
+        </div>
+        
+      </form>
+  </div>
+
