--- a/src/app/middle/middle.component.html
+++ b/src/app/middle/middle.component.html
@@ -1,5 +1,5 @@
 <app-ricerca (getAnnuncios)="ricerca($event)"></app-ricerca>
 
-<app-lista></app-lista>
+<app-lista [list]="listAnnuncios"></app-lista>
 
 <app-detail></app-detail>
