--- a/src/app/middle/lista/lista.component.html
+++ b/src/app/middle/lista/lista.component.html
@@ -1,1 +1,7 @@
-<p>lista works!</p>
+<div
+class="panel panel-default">
+    
+    <div class="panel-body">
+           <ng-content></ng-content>
+    </div>
+</div>
